@@ -407,3 +407,6 @@ Jan 15, 2001
 Jan 16, 2001
  - fix: added Tcl_FindExecutable(argv[0]) to Tcl initialization code (needed by
    Cygwin 1.1)
+Jan 21, 2001
+ - "find" and "find next" functionality improved and now it works for all
+   module output windows. Hotkeys: Ctrl-F, and F3 or Ctrl-N.
